--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -27,15 +27,15 @@
   }
 /* ===============Navigation */
 .navbar{
+    background: rgba(27, 27, 27, 0.838);
     position: fixed;
     width: 100%;
     z-index: 2;
-    padding: 25px 0;
+    padding: 5px 0;
     transition: all 0.3s ease;
 }
 .navbar.sticky{
-    background: rgba(27, 27, 27, 0.745);
-    backdrop-filter: blur(4px);
+    background: rgba(27, 27, 27, 0.838);
     padding: 10px 0;
     box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);
 }
@@ -44,40 +44,40 @@
     align-items: center;
     justify-content: space-between;
 }
-  .navbar .logo a{
+.navbar .logo a{
     color: #fff;
     font-size: 30px;
     font-weight: 600;
     text-decoration: none;
-  }
-  .navbar .menu-list{
+}
+.navbar .menu-list{
     display: inline-flex;
-  }
-  .menu-list li{
+}
+.menu-list li{
     list-style: none;
-  }
-  .menu-list li a{
+}
+.menu-list li a{
     color: #f5deb3;
     font-size: 18px;
     font-weight: 500;
     margin-left: 25px;
     text-decoration: none;
     transition: all 0.3s ease;
-  }
-  .menu-list li a:hover{
+}
+.menu-list li a:hover{
     color: #007bff;
-  }
-  .icon{
+}
+.icon{
     color: #fff;
     font-size: 20px;
     cursor: pointer;
     display: none;
-  }
-  .menu-list .cancel-btn{
+}
+.menu-list .cancel-btn{
     position: absolute;
     right: 30px;
     top: 20px;
-  }
+}
   /* ===============/Navigation */
 body {
     /* background-color:black; */
@@ -87,15 +87,6 @@ a {
     text-decoration: none;
 }
 
-nav {
-    border-bottom: 2px solid blue;
-    width: 100%;
-    padding: 1em 0;
-}
-a {
-    color: darkblue;
-    text-decoration: solid;
-}
 ul#menu {
     list-style: none;
     padding: 0;
@@ -169,7 +160,7 @@ button {
     }
 .hero-section {
     position: relative;
-    height: 60vh;
+    height: 100vh;
     background: url('Images/Home/brooke-lark-4J059aGa5s4-unsplash.jpg') no-repeat center ;
     background-size: cover;
 }
@@ -210,6 +201,9 @@ button {
 .read-more-btn:hover {
     background-color: #4169E1;
 }
+.page-set{
+    padding-top: 100px;
+}
 #page {
     width: 100%;
     margin: auto;
@@ -220,16 +214,11 @@ a {
     text-decoration: none;
 }
 
-    a:hover {
-        color: white;
-    }
-
-.footer {
-    text-align: center;
-    font-weight: bold;
-    font-size: 70%;
-    background-color: lightblue;
+a:hover {
+    color: white;
 }
+
+
 h1{
    
 }
@@ -253,7 +242,7 @@ header {
 
 /* Footer styles */
 .footer {
-    background-color: black;
+    background-color: #444;
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -1013,6 +1002,66 @@ th {
     margin-top: 20px;
 }
 
-    .clear-cart-button:hover {
-        background-color: #cc0000;
+.clear-cart-button:hover {
+    background-color: #cc0000;
+}
+/* Media Q */
+@media (max-width: 1230px) {
+    .content{
+      padding: 0 60px;
     }
+}
+@media (max-width: 1100px) {
+    .content{
+      padding: 0 40px;
+    }
+}
+@media (max-width: 900px) {
+    .content{
+      padding: 0 30px;
+    }
+}
+@media (max-width: 868px) {
+    body.disabled{
+      overflow: hidden;
+    }
+    .icon{
+      display: block;
+    }
+    .icon.hide{
+      display: none;
+    }
+    .navbar .menu-list{
+      position: fixed;
+      height: 100vh;
+      width: 80%;
+      max-width: 400px;
+      left: -100%;
+      top: 0px;
+      display: block;
+      padding: 40px 0;
+      text-align: center;
+      background: #222;
+      transition: all 0.3s ease;
+    }
+    .navbar.show .menu-list{
+      left: 0%;
+    }
+    .navbar .menu-list li{
+      margin-top: 45px;
+    }
+    .navbar .menu-list li a{
+      font-size: 23px;
+      margin-left: -100%;
+      transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    }
+    .navbar.show .menu-list li a{
+      margin-left: 0px;
+    }
+}
+@media (max-width: 380px) {
+    .navbar .logo a{
+      font-size: 27px;
+    }
+}
+  
