--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -37,6 +37,7 @@
 .navbar.sticky{
     background: rgba(27, 27, 27, 0.838);
     padding: 10px 0;
+    backdrop-filter: blur(4px);
     box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);
 }
 .navbar .content{
